<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_gradient"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingTop="@dimen/bottom_button_margin">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="11dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/about_text"
        android:textColor="@color/buttonTextColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="174dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_app"
        android:contentDescription="@string/logo_description" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="11dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="@color/buttonTextColor"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="11dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/authors_title"
        android:textAllCaps="false"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/big_text" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="11dp"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:text="@string/author1"
        android:textAlignment="viewStart"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/middle_text" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="11dp"
        android:fontFamily="casual"
        android:text="@string/author2"
        android:textAlignment="viewStart"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/middle_text" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="11dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/author3"
        android:textAlignment="viewStart"
        android:textColor="@color/buttonTextColor"
        android:textSize="@dimen/middle_text" />

    <Button
        android:id="@+id/btnVolver"
        style="@style/MainActivityButtonStyle"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:text="@string/btnVolver" />

</LinearLayout>
