<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context="com.example.arturo.guesswhofriends.GameActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/backgroundLayout"
        android:minWidth="25dp"
        android:minHeight="25dp"
        android:background="@drawable/high_blue"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/pgbMaxTime">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtQuestion"
                android:text="@string/lorem"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:scrollbars="vertical"
                style="@style/QuestionStyle" />

            <Button
                android:id="@+id/btnOne"
                android:tag="0"
                android:text="@string/btnOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MainActivityButtonStyle"/>
            <Button
                android:id="@+id/btnTwo"
                android:tag="1"
                android:text="@string/btnTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MainActivityButtonStyle"/>
            <Button
                android:id="@+id/btnThree"
                android:tag="2"
                android:text="@string/btnThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MainActivityButtonStyle"/>
            <Button
                android:id="@+id/btnFour"
                android:tag="3"
                android:text="@string/btnFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MainActivityButtonStyle"/>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pgbMaxTime"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="0"
        android:layout_alignParentBottom="true" />

</RelativeLayout>