<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context="com.example.arturo.guesswhofriends.MainActivity"
    android:background="@drawable/animation_list">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/textView"
            style="@style/AppNameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:foreground="@color/cardview_shadow_end_color"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textColor="@color/activity_login_text"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btnPlay"
            style="@style/MainActivityButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_play"
            android:layout_marginTop="45dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/btnAchievments"
            style="@style/MainActivityButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_achievments"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/btnPlay"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/btnConfig"
            style="@style/MainActivityButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_config"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/btnAchievments"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</ScrollView>