<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.arturo.guesswhofriends.SettingsActivity"
    android:gravity="center_vertical"
    android:background="@drawable/deep_contrast">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:columnCount="7"
        android:rowCount="5"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/txtQuantity"
            android:text="@string/txtQuantity"
            android:textSize="20sp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
        <Spinner
            android:id="@+id/spnQuantity"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" >

        </Spinner>
        <TextView
            android:id="@+id/txtDifficulty"
            android:text="@string/txtDifficulty"
            android:textSize="20sp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
        <Spinner
            android:id="@+id/spnDifficulty"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
        </Spinner>
        <TextView
            android:id="@+id/txtSound"
            android:text="@string/txtSound"
            android:textSize="20sp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
        <Switch
            android:id="@+id/swtSound"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnSpan="4"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:id="@+id/txtAnimations"
            android:text="@string/txtAnimations"
            android:textSize="20sp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />

        <Switch
            android:id="@+id/swtAnimations"
            android:layout_row="3"
            android:layout_column="4"
            android:layout_columnSpan="3"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/btnAbout"
            android:text="@string/btnAbout"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="7"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_style"/>
    </GridLayout>
</RelativeLayout>
